# KotonoTemplateProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  build_vs17.sh  build_vs18.sh  generate_cmakepresets.sh  generate_user_presets.sh
Extensions/: CMakeLists.txt
Extensions/Core/TestExtension/: CMakeLists.txt
Extensions/Core/TestExtension/include/kotono_extension_coretestextension/: test.h
Extensions/Editor/TestExtension/: CMakeLists.txt
Extensions/Editor/TestExtension/include/kotono_extension_editortestextension/: test.h
Extensions/Editor/TestExtension/src/: test.cpp
Extensions/TestCoreExtension/: CMakeLists.txt
Extensions/TestCoreExtension/src/: test.cpp
Extensions/TestEditorExtension/: CMakeLists.txt
Extensions/TestEditorExtension/src/: test.cpp
TestApplication/: CMakeLists.txt  projectSettings.json
TestApplication/assets/objects/: 0d1f54821a47cc45-2276df87c8a45ac8-2e94be3dddb3e00f-bfab2a2e2eb5b3cd.kobject  1bc55a0ae8c8a042-89fff875b952942e-55825e74db3291ef-2eb9e04eba34b322.kobject  1eee1122a7b0d144-e803f939182403cb-b86d27e2d993d79d-a79df6c56a6c8df1.kobject  2004583e68bd354f-977d4991715f9aae-cba49f3c8316ea3b-187242eada378737.kobject  2041d7380e36a348-768724dd6c662511-b64e5b38bc7a8c9c-0414775622f63787.kobject  20e5601c76d39544-4a4ffa3b8bfd9004-4f6728b64585f6b9-21a011134d821ebf.kobject  2dc59dcffd2dd94a-e76989ee77e6e99a-c5907c762ee5a9c5-af3dd00401747d5b.kobject  36e5db88-5bc7-4d82-b655-90a7f7a68fd4.kobject  47a32777-8f44-4c27-8c28-4995036dee04.kobject  6a1530fb-6d7d-4ca3-bcc2-f678ffc20348.kobject  6e779b4d2b51e649-a1a47bda62f6b6d2-f2eb89211de69dcd-5e8d41f11e2ed967.kobject  6ed943411c1d0145-fa7e129d436fefc7-d610a013cfe163f9-48ab854138be189a.kobject  957c7864d82c3444-6218a72fc22c5a48-64590125f059ba34-26a499d12f8e0047.kobject  9a2e695441940745-aa60ae4c285bbadd-263eb2705a3c70f4-cd6428a1fad26d1c.kobject  9c93da2b6a15cc4b-1b7f91f2e0a163c0-4c0d497d89797024-0285b108d9541ab1.kobject  9dd58d60-66b4-4ebe-962e-9e5af8732f36.kobject  a1827739865fc248-c43cfda62adf0cfa-c90ba0a0981a7ac7-cd7c45854e595fc3.kobject  abc82eba4a4aaf46-76ccfb85c6be0774-3bc4d3f1ceaf5300-fecb607699f53606.kobject  af8fe107-5d30-4e5b-8278-f941057165e7.kobject  d93dcd65-ee48-4e06-b961-a151c12f60f2.kobject  e0443c5e-d89a-4e9c-9918-f85693c6157e.kobject  ec99e465d428e74c-8e311768f78bce32-390d1cd28a20ce41-1c1b63de7cddd891.kobject  ee691331-9d58-4c32-88c8-383ee94adbf7.kobject  fb2961e6-0c72-402f-848d-7819988c29e1.kobject
TestApplication/src/: main.cpp
